[features] inter bevnet

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,62 +1,67 @@
-FROM osrf/ros:humble-desktop-full
+# 基于你现有的bevnet容器
+FROM bevnet_modi:v1
 
 # 设置环境变量
 ENV DEBIAN_FRONTEND=noninteractive
-ENV CUDA_HOME=/usr/local/cuda
-ENV PATH=${CUDA_HOME}/bin:${PATH}
-ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
+ENV ROS_DISTRO=humble
+ENV PYTHONPATH=/workspace/bevnet:${PYTHONPATH}
 
-# 安装基础依赖
-RUN apt-get update && apt-get install -y \
-    python3-pip \
-    python3-dev \
-    git \
-    wget \
-    vim \
-    build-essential \
-    cmake \
-    libeigen3-dev \
-    libboost-all-dev \
-    libpcl-dev \
-    && rm -rf /var/lib/apt/lists/*
+# 安装ROS 2 Humble (如果还没有安装)
+RUN apt-get update && \
+    apt-get install -y software-properties-common && \
+    add-apt-repository universe && \
+    apt-get update && \
+    curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg && \
+    echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null && \
+    apt-get update || true
+
+# 安装ROS 2基础包
+RUN apt-get install -y \
+    ros-${ROS_DISTRO}-desktop \
+    ros-${ROS_DISTRO}-ros-base \
+    python3-colcon-common-extensions \
+    python3-rosdep \
+    python3-argcomplete \
+    || true
+
+# 安装Nav2相关包
+RUN apt-get install -y \
+    ros-${ROS_DISTRO}-navigation2 \
+    ros-${ROS_DISTRO}-nav2-bringup \
+    ros-${ROS_DISTRO}-robot-localization \
+    ros-${ROS_DISTRO}-slam-toolbox \
+    ros-${ROS_DISTRO}-pcl-ros \
+    ros-${ROS_DISTRO}-pcl-conversions \
+    ros-${ROS_DISTRO}-cv-bridge \
+    ros-${ROS_DISTRO}-image-transport \
+    || true
 
 # 安装Python依赖
-RUN pip3 install --upgrade pip && \
-    pip3 install \
-        torch==2.0.1 \
-        torchvision==0.15.2 \
-        numpy==1.24.3 \
-        opencv-python==4.8.0.74 \
-        mcap==1.1.1 \
-        mcap-ros2-support==0.5.3 \
-        scipy \
-        pillow \
-        pyyaml \
-        rospkg \
-        transforms3d
+RUN pip3 install --no-cache-dir \
+    mcap==1.1.1 \
+    mcap-ros2-support==0.5.3 \
+    ros2-numpy \
+    || true
 
 # 创建工作空间
-RUN mkdir -p /bevnet_nav2_ws/src
-WORKDIR /bevnet_nav2_ws
+RUN mkdir -p /opt/ros_ws/src
+WORKDIR /opt/ros_ws
 
-# 安装额外的ROS2包
-RUN apt-get update && apt-get install -y \
-    ros-humble-navigation2 \
-    ros-humble-nav2-bringup \
-    ros-humble-robot-localization \
-    ros-humble-slam-toolbox \
-    ros-humble-pcl-ros \
-    ros-humble-pcl-conversions \
-    ros-humble-angles \
-    ros-humble-cv-bridge \
-    ros-humble-message-filters \
-    ros-humble-tf2-sensor-msgs \
-    ros-humble-tf2-geometry-msgs \
-    && rm -rf /var/lib/apt/lists/*
+# 初始化rosdep（如果需要）
+RUN if [ ! -f /etc/ros/rosdep/sources.list.d/20-default.list ]; then \
+        rosdep init || true; \
+    fi && \
+    rosdep update || true
 
-# 设置entrypoint
-COPY docker/entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT ["/entrypoint.sh"]
+# 设置entrypoint脚本
+RUN echo '#!/bin/bash\n\
+source /opt/ros/${ROS_DISTRO}/setup.bash\n\
+export PYTHONPATH=/workspace/bevnet:${PYTHONPATH}\n\
+if [ -f /opt/ros_ws/install/setup.bash ]; then\n\
+    source /opt/ros_ws/install/setup.bash\n\
+fi\n\
+exec "$@"' > /ros_entrypoint.sh && \
+    chmod +x /ros_entrypoint.sh
 
+ENTRYPOINT ["/ros_entrypoint.sh"]
 CMD ["bash"]
