--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -2,11 +2,18 @@ version: '3.8'
 
 services:
   bevnet_nav2:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile
-    image: bevnet_nav2:latest
+    # 使用你现有的bevnet容器作为基础镜像
+    image: bevnet_modi:v1
     container_name: bevnet_nav2_container
+    
+    # GPU支持
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
     
     # 网络模式
     network_mode: host
@@ -17,7 +24,11 @@ services:
     environment:
       - DISPLAY=${DISPLAY}
       - QT_X11_NO_MITSHM=1
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=all
       - ROS_DOMAIN_ID=1
+      - PYTHONPATH=/workspace/bevnet:${PYTHONPATH}
+      - ROS_DISTRO=humble  # 或者jazzy，取决于你的ROS版本
     
     # 挂载卷
     volumes:
@@ -25,18 +36,30 @@ services:
       - /tmp/.X11-unix:/tmp/.X11-unix:rw
       - ${HOME}/.Xauthority:/root/.Xauthority:rw
       
-      # 代码和数据
-      - ../src:/bevnet_nav2_ws/src:rw
-      - ../models:/bevnet_nav2_ws/models:rw
-      - ../data:/bevnet_nav2_ws/data:rw
-      - ../scripts:/bevnet_nav2_ws/scripts:rw
+      # BEVNet项目
+      - /home/gyc/semantic_bevnet:/workspace/bevnet:rw
       
-      # 配置文件
-      - ../src/bevnet_nav2_bringup/config:/bevnet_nav2_ws/config:rw
+      # 数据目录
+      - /media/gyc/Backup Plus7/gyc/thesis:/workspace/data:rw
+      
+      # BEVNet Nav2工作空间
+      - /home/gyc/bevnet_nav2_ws:/workspace/bevnet_nav2_ws:rw
+      
+      # 为了方便，直接挂载src目录到ROS工作空间
+      - /home/gyc/bevnet_nav2_ws/src:/opt/ros_ws/src:rw
+      - /home/gyc/bevnet_nav2_ws/models:/workspace/models:rw
+      - /home/gyc/bevnet_nav2_ws/config:/workspace/config:rw
+      - /home/gyc/bevnet_nav2_ws/scripts:/workspace/scripts:rw
     
     # 设备
     devices:
       - /dev/dri:/dev/dri
     
+    # 工作目录
+    working_dir: /opt/ros_ws
+    
     stdin_open: true
     tty: true
+    
+    # 启动命令
+    command: /bin/bash -c "source /opt/ros/${ROS_DISTRO}/setup.bash && /bin/bash"
