[bugix] fix bug in mcap player

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     ],
     "python.analysis.extraPaths": [
         "/opt/ros/jazzy/lib/python3.12/site-packages"
+    ],
+    "cursorpyright.analysis.extraPaths": [
+        "/opt/ros/jazzy/lib/python3.12/site-packages"
     ]
 }
